--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="app">
 <div id="main_box">
-    <div><img style="width:70px;height:70px"src="./EOS_spinning_logo.gif" alt=""></div>
+
     <div>
         <div class="animation hour-1">0</div>
         <div class="animation hour-2">0</div>
@@ -19,8 +19,12 @@
         <div class="animation sec-1">0</div>
         <div class="animation sec-2">0</div>
     </div>
-    <div>现在Eth的价格：<span id="eth">6666</span></div>
-    <div>现在ico的价格：<span id="eos-now">0.002</span></div>
+    <div class="eos-icon"><img style="width:100px;height:100px"src="./EOS_spinning_logo.gif" alt=""></div>
+    <div class="price">
+        <div class="">现在Eth的价格：<span id="eth">6666</span></div>
+        <div class="">现在ico的价格：<span id="eos-now">0.002</span></div>
+        <div class="">现在ico的价格：<span id="eos-now">0.002</span></div>
+    </div>
 </div>
 <iframe style="display:none" id="eos" src="https://eos.io/eos-sales-statistic.php" width="" height=""></iframe>
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
