调整目录结构

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>eos今天多少钱</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body id="app">
 <div id="main_box" onclick="copy();" title="点一下复制合约地址">
@@ -29,6 +29,6 @@
 </div>
 <iframe style="display:none" id="eos" src="https://eos.io/eos-sales-statistic.php" width="" height=""></iframe>
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-<script src="./jquery.particleground.min.js" charset="utf-8"></script>
+<script src="./js/jquery.particleground.min.js" charset="utf-8"></script>
 </body>
 </html>
