增加多一些信息

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     </div>
     <div class="eos-icon"><img style="width:120px;height:146px"src="./EOS_spinning_logo.gif" alt=""></div>
     <div class="price">
-        <div class="">现在Eth的价格：<span id="eth">6666</span></div>
-        <div class="">现在ico的价格：<span id="eos-now">0.002</span></div>
-        <div class="">投入的eth数量：<span id="eth-now">dailyTotal</span></div>
-        <div class="">昨天ico的价格：<span id="eos-yesterday">0.002</span></div>
+        <div>交易所eos的价格：<span id="eos-exchange">666</span></div>
+        <div>现在Eth的价格：<span id="eth">6666</span></div>
+        <div>现在ico的价格：<span id="eos-now">0.002</span></div>
+        <div>投入的eth数量：<span id="eth-now">dailyTotal</span></div>
+        <div>昨天ico的价格：<span id="eos-yesterday">0.002</span></div>
     </div>
     <div style="display:none" id="detail">0xd0a6E6C54DbC68Db5db3A091B171A77407Ff7ccf</div>
 </div>
